Fix squishiness

--- a/src/scss/components/_header-dance.scss
+++ b/src/scss/components/_header-dance.scss
@@ -15,6 +15,7 @@ header.header-dance {
   }
   
   img {
+    width: inherit !important;
     margin-bottom: -35px;
 
     @media screen and (max-width: 780px) {
